<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="35px">
        <TextView
            android:id="@+id/rezultatiUvod"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textColor="#000000"
            android:textSize="35sp"
            android:gravity="center_vertical"
            android:text="@string/rezultatiUvod" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/pokal_transparentna" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="35px">
        <Button android:id="@+id/moji_highscores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moji_highscores_button"
            android:background="@drawable/hover_button"/>
        <Button android:id="@+id/easy_highscores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy_highscores_button"
            android:background="@drawable/hover_button"/>
        <Button android:id="@+id/medium_highscores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium_highscores_button"
            android:background="@drawable/hover_button"/>
        <Button android:id="@+id/hard_highscores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard_highscores_button"
            android:background="@drawable/hover_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tabelaRezultatov"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--<WebView
            android:id="@+id/ble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:textSize="35sp"
            android:background="@android:color/transparent" />-->

    </LinearLayout>
</LinearLayout>